# chatty

./: .dockerignore  .gitignore  Chatty.postman_collection.json  README.md  chatty.Dockerfile  chatty.env  docker-compose.yml  pyproject.toml  va.Dockerfile  va.py
src/: va.py
src/ui/: package-lock.json  package.json  vite.config.ts
src/ui/src/: app.html
src/ui/src/lib/components/: ChatBox.svelte  ConfigDropdown.svelte  ConfigInput.svelte  HistoryFrame.svelte  (+4 more)
src/ui/src/routes/: +error.svelte  +layout.svelte  +page.svelte
src/va/context/: context.py
src/va/controllers/: __init__.py  chat_controller.py  context_controller.py  error.py  stt_controller.py  tts_controller.py
src/va/flaskr/: __init__.py
src/va/mongo/: connection.py  db.py
src/va/openai_tools/: ai_audio.py  ai_chat.py  error.py  moderation.py
src/va/openai_tools/util/: __init__.py
src/va/resources/: config.ini
src/va/routes/: __init__.py  home.py
src/va/services/: __init__.py  chat_service.py  context_service.py  helpers.py  service.py  stt_service.py  tts_service.py
src/va/tts/: error.py  talk.py
va/: app.py  va.py
va/config/: config_manager.py
va/context/: context.py  error.py
va/controllers/: __init__.py  chat_controller.py
va/flaskr/: __init__.py  app.py  error.py
va/mongo/: connection.py  connection_factory.py  db.py
va/openai_tools/: __init__.py  ai.py  ai_audio.py  ai_chat.py  error.py  moderation.py
va/openai_tools/config/: config_manager.py
va/openai_tools/util/: __init__.py
va/resources/: config.ini
va/text_to_speech/: talk.py
va/tts/: talk.py
(+14 files in other folders)
