[tool.poetry]
name = "va"
version = "0.1.0"
description = ""
authors = ["Aziz Serin <azizserin313@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.27.2"
configparser = "^5.3.0"
logging = "^0.4.9.6"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
